# egglog-program

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
src/: builder.rs  egraph.rs  facts.rs  lib.rs  program.rs  rules.rs  schedule.rs  sorts.rs
src/egraph/: builder.rs  egglog_names.rs  facts.rs  macros.rs  program.rs  rules.rs  schedule.rs  sorts.rs
