[package]
name = "egglog-program"
version = "0.1.0"
edition = "2021"
description = "Utilities for building Egglog programs via the egglog Command API."
repository = "https://github.com/pbonh/egglog-program"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
