[package]
name = "egglog-program"
version = "0.1.0"
edition = "2021"
description = "Utilities for building Egglog programs via the egglog Command API."
repository = "https://github.com/pbonh/egglog-program"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egglog = { workspace = true }
state-shift = { workspace = true }
itertools = { workspace = true }
frunk = { workspace = true }
derive-getters = { workspace = true }
indexmap = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
indoc = "2.0.4"
utilities = { path = "../utilities" }
